[gd_scene load_steps=32 format=2]

[ext_resource path="res://sprites/Idle/Idle1.png" type="Texture" id=1]
[ext_resource path="res://sprites/Idle/Idle2.png" type="Texture" id=2]
[ext_resource path="res://sprites/Idle/Idle3.png" type="Texture" id=3]
[ext_resource path="res://sprites/Moving/RobotMove.png" type="Texture" id=4]
[ext_resource path="res://sprites/Idle/Idle4.png" type="Texture" id=5]
[ext_resource path="res://RobotB.gd" type="Script" id=6]
[ext_resource path="res://sprites/errorBlue.png" type="Texture" id=7]
[ext_resource path="res://Moving SE.wav" type="AudioStream" id=8]
[ext_resource path="res://Error SE.wav" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 2048, 1024, 1024 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1024, 2048, 1024, 1024 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2048, 2048, 1024, 1024 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 3072, 2048, 1024, 1024 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 3072, 1024, 1024 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1024, 3072, 1024, 1024 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2048, 3072, 1024, 1024 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 3072, 3072, 1024, 1024 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 1024, 1024 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1024, 0, 1024, 1024 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2048, 0, 1024, 1024 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 3072, 0, 1024, 1024 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 1024, 1024, 1024 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1024, 1024, 1024, 1024 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2048, 1024, 1024, 1024 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 3072, 1024, 1024, 1024 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Error",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 1.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "MovingL",
"speed": 12.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "MovingDown",
"speed": 12.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "MovingR",
"speed": 12.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "MovingU",
"speed": 12.0
} ]

[sub_resource type="Animation" id=18]
resource_name = "error"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Robot:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Error" ]
}

[sub_resource type="Animation" id=19]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Robot:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "MovingU" ]
}

[sub_resource type="Animation" id=20]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Robot:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "MovingL" ]
}

[sub_resource type="Animation" id=21]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Robot:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "MovingR" ]
}

[sub_resource type="Animation" id=22]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Robot:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "MovingDown" ]
}

[node name="RobotB" type="KinematicBody2D"]
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 6 )

[node name="Robot" type="AnimatedSprite" parent="."]
frames = SubResource( 17 )
animation = "Idle"
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -192.18, 159.594, 160, 160, 160, 64, 128, -96, 128, -128, 128, -224, -160, -224, -160, -128, -160, -96, -192, 64 )

[node name="RayCast2DR" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 650, 0 )

[node name="RayCast2DL" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -650, 0 )

[node name="RayCast2DD" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 640 )

[node name="RayCast2DU" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -650 )

[node name="MoveAnime" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/error = SubResource( 18 )
anims/move_d = SubResource( 19 )
anims/move_l = SubResource( 20 )
anims/move_r = SubResource( 21 )
anims/move_u = SubResource( 22 )

[node name="movingsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -12.0

[node name="crash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
pitch_scale = 0.69

[connection signal="animation_finished" from="MoveAnime" to="." method="_on_MoveAnime_animation_finished"]
